refact (scss): change class names

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -63,12 +63,12 @@ $font-w-medium: 500;
 $font-w-semi-bold: 600;
 
 // font size
-$font-s-xsmall: 10px;
-$font-s-small: 12px;
-$font-s-regular: 14px;
-$font-s-medium: 16px; // -> base size
-$font-s-big: 18px;
-$font-s-large: 20px; // ->  x size
+$font-s-xsmall: 12px;
+$font-s-small: 14px;
+$font-s-regular: 16px; // -> base size
+$font-s-medium: 18px; 
+$font-s-big: 20px;
+$font-s-large: 22px; // ->  x size
 $font-s-xlarge: 25px; // -> xx size
 $font-s-xxlarge: 32px;
 $font-s-xxxlarge: 38px;
