--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -3,7 +3,7 @@
 * @requires     variables.scss
 */
 
-.pagination-ue {
+.pagination-cg {
   list-style: none;
   display: flex;
   align-items: center;
