--- a/src/styles/components/_side-panel.scss
+++ b/src/styles/components/_side-panel.scss
@@ -3,7 +3,7 @@
 * @requires     variables.scss
 */
 
-.side-panel-ue {
+.side-panel-cg {
   display: flex;
   margin-bottom: 10px;
   @include respond-to("large") {
