reafact (scss): refact sass folders

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,19 +17,13 @@
   'layout/footer';
 
  @import
-  'components/banner',
-  'components/search-suggestions',
   'components/checkbox',
   'components/button',
   'components/icon',
   'components/input',
   'components/card',
-  'components/card-panel',
-  'components/side-panel',
   'components/spinner',
-  'components/pagination',
-  'components/skeleton',
-  'components/toast';
+  'components/skeleton';
 
 @import
   'pages/common',
